rt/test/errors/014/test.volt
//T default:no
//T macro:expect-failure
//T check:expected
module test;

fn main(args: string[],) i32
{
	return 0;
}
